--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
             <div></div>
             <div></div>
             <div></div>
-            <div><h3 id = 'highScore' style="font-family: 'Fontdiner Swanky', cursive;">High Score:</h3></div>
-            <div><h3 id = 'score' style="font-family: 'Fontdiner Swanky', cursive;">Score:</h3></div> 
+            <div><h3 id = 'highScore'>High Score:</h3></div>
+            <div><h3 id = 'score'>Score:</h3></div> 
         </div>
         <div id='overlay'>
             <div id='alertBox'>
                 <div>
-                    <h3 style="font-family: 'Fontdiner Swanky', cursive;text-align: center">you lost!!!</h3>
+                    <h3 id='lost'>you lost!!!</h3>
                     <br>
-                    <h3 id='reason' style="font-family:'Fira Sans Condensed', sans-serif;text-align: center;"></h3>
+                    <h3 id='reason'></h3>
                     <br>
-                    <h3 id='achievement' style ="font-family:'Press Start 2P', cursive; text-align: center;"></h3>
+                    <h3 id='achievement'></h3>
                     <br>
-                    <h3 id ='presentScore' style="font-family:'Fira Sans Condensed', sans-serif;text-align: center;"></h3>
+                    <h3 id ='presentScore'></h3>
                 </div>
                 <br>
                 <button id='retryButton'>
-                    <h3 style="font-family: 'Fontdiner Swanky', cursive;font-size:30px">Retry</h3>
+                    <h3>Retry</h3>
                 </button>
             </div>
         </div>
