sound effects + minor fixes

--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
             </div>
             <div></div>
         </div>
+        <audio id ='coin' style='display:none'>
+            <source src="./sounds/coin1.wav" type="audio/wav">
+        </audio>
+        <audio id='wrong' style='display:none'>
+            <source src="./sounds/wrong.wav" type="audio/wav">
+        </audio>
+        <audio id='error' style='display:none'>
+            <source src="./sounds/error.wav" type="audio/wav">
+        </audio>
+        <audio id='jump' style='display:none'>
+            <source src="./sounds/jump.wav" type="audio/wav">
+        </audio>
+
     </div>
 
     
