--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <div id='backgroundMain' tabindex="1" >
         <div id='scoreBoard'>
             <div></div>
-            <div></div>
-            <div></div>
+            <div id ='snakeGrowth1', style="display:flex">
+            </div>
+            <div id ='snakeSpeed1', style="display:flex">
+            </div>
             <div><h3 id = 'highScore'>High Score:</h3></div>
             <div><h3 id = 'score'>Score:</h3></div> 
         </div>
