names for growth options changed

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                         <li class='list'>For best experience play in full screen.</li>
                         <li class='list'>snake growth   
                             <select id='snakeGrowth' style="font-family:'Fira Sans Condensed', sans-serif;text-align: center">
-                                <option value='5' selected="selected" >Easy</option>
+                                <option value='5' selected="selected" >little</option>
                                 <option value='10'>Medium</option>
-                                <option value='15'>Hard</option>
+                                <option value='15'>High</option>
                             </select>
                         </li>
                         <li class='list'>snake speed 
